chore: restart nginx after deployment

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -66,6 +66,7 @@ jobs:
             docker pull ghcr.io/${{ github.repository }}/backend:latest
             docker pull ghcr.io/${{ github.repository }}/frontend:latest
             docker compose -f docker-compose-wecraftcode.yaml up -d
+            docker compose -f docker-compose-reverseproxy.yaml restart
 
       - name: List and remove non-latest images in Digital Ocean Droplet
         uses: appleboy/ssh-action@v0.1.0
